# PG-Greedy-Lokal

./: .gitignore  CMakeLists.txt  README.md  README_DE.md  imgui.ini  runner.ipynb  runner.py
example/: main.cpp
include/: camera.hpp  greedy_labeler.hpp  imconfig.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  renderer.hpp  ui_controls.hpp  visualizer.hpp
include/glad/: glad.h
pg-greedy/: README.md
shaders/: label.vert  point.frag
src/: camera.cpp  glad.c  greedy_labeler.cpp  imgui_impl_opengl3.cpp  renderer.cpp  ui_controls.cpp  visualizer.cpp
tools/: csv_labeler.cpp
